# TinyStudio

./: .gitignore  CMakeLists.txt  README.md
app/audio/: audio-resampler.cc  audio-resampler.h  wasapi-audio-monitor.cc  wasapi-audio-monitor.h  wasapi-audio-source.cc  wasapi-audio-source.h
app/core/: core-audio-data.h  core-audio.cc  core-audio.h  core-component-i.h  core-d3d-data.h  core-d3d.cc  core-d3d.h  core-display.cc  core-display.h  core-engine.cc  core-engine.h  core-filter.cc  core-filter.h  core-output.cc  core-output.h  core-scene-data.h  core-scene.cc  core-scene.h  core-settings-data.h  core-settings.cc  core-settings.h  core-video-data.h  core-video.cc  core-video.h  main.cc
app/dx/: d3dUtil.cpp  dx-header.cc  dx-header.h
app/encoder/: base-encoder-data.h  base-encoder-i.h
app/encoder/ffmpeg-aac-encoder/: ffmpeg-aac-encoder.cc  ffmpeg-aac-encoder.h
app/encoder/x264-encoder/: x264-encoder.cc  x264-encoder.h
app/filter/: base-filter-i.h
app/filter/ai-detect-mgr/: ai-detect-define.h  ai-detect-item-i.cc  ai-detect-item-i.h  ai-detect-mgr.cc  ai-detect-mgr.h  item-face-cnn.cc  item-face-cnn.h
app/filter/bolt-box/: boltbox-filter.cc  boltbox-filter.h
app/filter/face-detect/: facedetect-filter.cc  facedetect-filter.h
app/filter/split/: split-filter.cc  split-filter.h
app/output/: base-output-i.h
app/output/file-output/: file-output.cc  file-output.h
app/sources/: base-source-i.cc  base-source-i.h
app/sources/desktop/: desktop-capture.cc  desktop-capture.h
app/sources/gdiplus-text/: gdiplus-text-source.cc  gdiplus-text-source.h
app/sources/image/: graphics-ffmpeg.cc  graphics-ffmpeg.h  image-source.cc  image-source.h
app/sources/media/: media-controler.cc  media-controler.h  media-source-logic.cc  media-source-logic.h
app/sources/model/obj-model/: bitmap-texture-file.h  obj-model-source.cc  obj-model-source.h  obj-render-mgr.cc  obj-render-mgr.h  obj-resource-mgr.cc  obj-resource-mgr.h
app/utils/: CoTaskMemPtr.hpp  circlebuf.h  logger.cc  logger.h  platform.cc  platform.h
resources/HLSL/: Basic.hlsli  Basic_PS_ThreeMirror.hlsl  Expand_VS_2D.hlsl  Model.hlsli  Model_PS.hlsl  Model_VS.hlsl  Scale_VS_2D.hlsl
third-part/ffmpeg/x64/: mbedcrypto.lib  mbedtls.lib  mbedx509.lib  rnnoise.lib
third-part/ffmpeg/x86/: mbedcrypto.lib  mbedtls.lib  mbedx509.lib
third-part/libfacedetection/include/: facedetectcnn.h
third-part/libfacedetection/x64/: facedetection.lib  facedetectiond.lib
third-part/libfacedetection/x86/: facedetection.lib  facedetectiond.lib
third-part/libyuv/x64/: yuv.lib
third-part/libyuv/x86/: yuv.lib
